--- a/src/app/AppComponent.html
+++ b/src/app/AppComponent.html
@@ -23,7 +23,7 @@
                   <p>{{ app.description }}</p>
                 </div>
                 <div class="tags">
-                  <span *ngFor="let category of app.categories">{{ category }}</span>
+                  <span *ngFor="let category of app.categories" (click)="OnCategoryChanged(category)">{{ category }}</span>
                 </div>
               </div>
               <div class="box-info--footer">
